Update to RU 2.1.6 (fixed)

--- a/Translation/PPF-NeonFlats-CR_en_ru.xml
+++ b/Translation/PPF-NeonFlats-CR_en_ru.xml
@@ -11,7 +11,7 @@
       <EDID>zPOIJoel06</EDID>
       <REC>CELL:FULL</REC>
       <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
-      <Dest>Подвал</Dest>
+      <Dest>Клуб любителей электроники</Dest>
     </String>
   </Content>
 </SSTXMLRessources>
