--- a/Translation/PPF_en_ru.xml
+++ b/Translation/PPF_en_ru.xml
@@ -7,24 +7,6 @@
     <Version>2</Version>
   </Params>
   <Content>
-    <String List="0" Partial="2">
-      <EDID>[00000000]</EDID>
-      <REC>TES4:CNAM</REC>
-      <Source>BenRierimanu</Source>
-      <Dest>BenRierimanu</Dest>
-    </String>
-    <String List="0" Partial="2">
-      <EDID>[00000000]</EDID>
-      <REC>TES4:SNAM</REC>
-      <Source>Build Version: 74.5
-Previsibines Repair Pack ESM
-Built from 1.10.163 and requires all DLC.
-Please see the nexus mod page or git repository for extended author credits and community contributions.</Source>
-      <Dest>Build Version: 74.5
-Previsibines Repair Pack ESM
-Built from 1.10.163 and requires all DLC.
-Please see the nexus mod page or git repository for extended author credits and community contributions.</Dest>
-    </String>
     <String List="0">
       <EDID>DLC04ZooCageWallTallDoorSingle01</EDID>
       <REC>DOOR:FULL</REC>
@@ -547,11 +529,11 @@ Please see the nexus mod page or git repository for extended author credits and 
       <Source>Andrew Station</Source>
       <Dest>Станция &quot;Эндрю&quot;</Dest>
     </String>
-    <String List="0" Partial="1">
+    <String List="0">
       <EDID>zLexingtonGarage</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Parking Garage</Source>
-      <Dest>Лексингтонский парковочный гараж</Dest>
+      <Dest>Автостоянка Лексингтона</Dest>
     </String>
     <String List="0">
       <EDID>zUnusedSubwayTerminalShowcase</EDID>
@@ -1235,7 +1217,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>zPOIJoel06</EDID>
       <REC>CELL:FULL</REC>
       <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
-      <Dest>Подвал клуба любителей электроники</Dest>
+      <Dest>Клуб любителей электроники</Dest>
     </String>
     <String List="0">
       <EDID>MaldenCenter01</EDID>
@@ -1464,6 +1446,12 @@ Please see the nexus mod page or git repository for extended author credits and 
       <REC>WRLD:FULL</REC>
       <Source>Nuka-Town Market</Source>
       <Dest>Рынок Ядер-Тауна</Dest>
+    </String>
+    <String List="1">
+      <EDID>PRP_Dev_Notice</EDID>
+      <REC>MESG:DESC</REC>
+      <Source>I found some strawberry cheesecake!</Source>
+      <Dest>Я нашёл(-ла) клубничный чизкейк!</Dest>
     </String>
   </Content>
 </SSTXMLRessources>
