--- a/Translation/PRP_en_fr.xml
+++ b/Translation/PRP_en_fr.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <SSTXMLRessources>
   <Params>
-    <Addon>PRP.esp</Addon>
+    <Addon>prp.esp</Addon>
     <Source>en</Source>
     <Dest>fr</Dest>
     <Version>2</Version>
@@ -16,11 +16,13 @@
     <String List="0" Partial="2">
       <EDID>[00000000]</EDID>
       <REC>TES4:SNAM</REC>
-      <Source>Build Version: 74.8Previsibines Repair Pack ESP
-Built from 1.10.163 and requires all DLC.
+      <Source>Build Version: 74.14 NG
+Previsibines Repair Pack ESP
+Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Source>
-      <Dest>Build Version: 74.8Previsibines Repair Pack ESP
-Built from 1.10.163 and requires all DLC.
+      <Dest>Build Version: 74.14 NG
+Previsibines Repair Pack ESP
+Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Dest>
     </String>
     <String List="0">
@@ -57,7 +59,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>DLC04BottlingPlant01</EDID>
       <REC>CELL:FULL</REC>
       <Source>The World of Refreshment</Source>
-      <Dest>Le Monde des Rafraîchissements</Dest>
+      <Dest>Le monde des rafraîchissements</Dest>
     </String>
     <String List="0">
       <EDID>CambridgeMassChemical01</EDID>
@@ -681,7 +683,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>RailroadHQEscapeTunnel</EDID>
       <REC>CELL:FULL</REC>
       <Source>Railroad HQ Escape Tunnel</Source>
-      <Dest>Tunnel d&apos;évacuation du QG du Réseau du Rail</Dest>
+      <Dest>Tunnel d&apos;évacuation du QG du Réseau du rail</Dest>
     </String>
     <String List="0">
       <EDID>BigJohnsSalvage01</EDID>
@@ -717,7 +719,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>ConcordMuseum01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Museum of Freedom</Source>
-      <Dest>Musée de la Liberté</Dest>
+      <Dest>Musée de la liberté</Dest>
     </String>
     <String List="0">
       <EDID>GoodneighborOldStateHouse</EDID>
@@ -813,7 +815,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>DLC04HubFizztopMountainInterior01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Fizztop Mountain</Source>
-      <Dest>Mont Pétillant</Dest>
+      <Dest>Mont pétillant</Dest>
     </String>
     <String List="0">
       <EDID>GoodneighborTheMemoryDen</EDID>
@@ -1035,7 +1037,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>DLC04BottlingPlant02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Secure Beverageer Lab</Source>
-      <Dest>Laboratoire de docteur ès soda sécurisé</Dest>
+      <Dest>Sécurisez le laboratoire docteur ès soda.</Dest>
     </String>
     <String List="0">
       <EDID>SandyCovesHome01</EDID>
@@ -1089,7 +1091,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>RailroadHQ01</EDID>
       <REC>CELL:FULL</REC>
       <Source>Railroad HQ</Source>
-      <Dest>QG du Réseau du Rail</Dest>
+      <Dest>QG du Réseau du rail</Dest>
     </String>
     <String List="0">
       <EDID>FensParkviewApartments01</EDID>
@@ -1779,7 +1781,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>zPOIJoel06</EDID>
       <REC>CELL:FULL</REC>
       <Source>Electrical Hobbyist&apos;s Club Cellar</Source>
-      <Dest>Club des Électriciens Amateurs</Dest>
+      <Dest>Club des Électriciens Amateurs - Cave</Dest>
     </String>
     <String List="0">
       <EDID>DLC03POI40Int</EDID>
@@ -2040,10 +2042,52 @@ Please see the nexus mod page or git repository for extended author credits and 
       <Dest>Commonwealth</Dest>
     </String>
     <String List="0">
+      <EDID>DiamondCity</EDID>
+      <REC>WRLD:FULL</REC>
+      <Source>Diamond City</Source>
+      <Dest>Diamond City</Dest>
+    </String>
+    <String List="0">
+      <EDID>Goodneighbor</EDID>
+      <REC>WRLD:FULL</REC>
+      <Source>Goodneighbor</Source>
+      <Dest>Goodneighbor</Dest>
+    </String>
+    <String List="0">
+      <EDID>SanctuaryHillsWorld</EDID>
+      <REC>WRLD:FULL</REC>
+      <Source>Sanctuary Hills</Source>
+      <Dest>Sanctuary Hills</Dest>
+    </String>
+    <String List="0">
+      <EDID>DLC03FarHarbor</EDID>
+      <REC>WRLD:FULL</REC>
+      <Source>The Island</Source>
+      <Dest>L&apos;île</Dest>
+    </String>
+    <String List="0">
+      <EDID>DLC03VRWorldspace</EDID>
+      <REC>WRLD:FULL</REC>
+      <Source>Simulation</Source>
+      <Dest>Simulation</Dest>
+    </String>
+    <String List="0">
       <EDID>NukaWorld</EDID>
       <REC>WRLD:FULL</REC>
       <Source>Nuka-World</Source>
       <Dest>Nuka-World</Dest>
+    </String>
+    <String List="0">
+      <EDID>NukaWorldAmphitheater</EDID>
+      <REC>WRLD:FULL</REC>
+      <Source>Bradberton Amphitheater</Source>
+      <Dest>Amphithéâtre de Bradberton</Dest>
+    </String>
+    <String List="0">
+      <EDID>NukaWorldMarket</EDID>
+      <REC>WRLD:FULL</REC>
+      <Source>Nuka-Town Market</Source>
+      <Dest>Marché de Nuka-Town</Dest>
     </String>
   </Content>
 </SSTXMLRessources>
