Import Japanese update (UFO4P 2.1.7)

--- a/Translation/PPF_en_ja.xml
+++ b/Translation/PPF_en_ja.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <SSTXMLRessources>
   <Params>
-    <Addon>PPF.esm</Addon>
+    <Addon>ppf.esm</Addon>
     <Source>en</Source>
     <Dest>ja</Dest>
     <Version>2</Version>
@@ -16,13 +16,13 @@
     <String List="0" Partial="2">
       <EDID>[00000000]</EDID>
       <REC>TES4:SNAM</REC>
-      <Source>Build Version: 74.5
+      <Source>Build Version: 74.16 NG
 Previsibines Repair Pack ESM
-Built from 1.10.163 and requires all DLC.
+Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Source>
-      <Dest>Build Version: 74.5
+      <Dest>Build Version: 74.16 NG
 Previsibines Repair Pack ESM
-Built from 1.10.163 and requires all DLC.
+Built from 1.10.984 and requires all DLC.
 Please see the nexus mod page or git repository for extended author credits and community contributions.</Dest>
     </String>
     <String List="0">
@@ -215,7 +215,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>InstituteConcourse</EDID>
       <REC>CELL:FULL</REC>
       <Source>The Institute</Source>
-      <Dest>インスティチュート</Dest>
+      <Dest>インスティテュート</Dest>
     </String>
     <String List="0">
       <EDID>CollegeSquare01</EDID>
@@ -455,7 +455,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>PrydwenHull03</EDID>
       <REC>CELL:FULL</REC>
       <Source>Prydwen Quarters</Source>
-      <Dest>プリドゥエンのコーター</Dest>
+      <Dest>プリドゥエンの宿舎</Dest>
     </String>
     <String List="0">
       <EDID>CambridgeKendallHospital01</EDID>
@@ -539,7 +539,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>PoseidonEnergy02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Poseidon Energy Sublevels</Source>
-      <Dest>サブレベル</Dest>
+      <Dest>ポセイドンエネルギー地下</Dest>
     </String>
     <String List="0">
       <EDID>AndrewStation01</EDID>
@@ -547,7 +547,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <Source>Andrew Station</Source>
       <Dest>アンドリュー駅</Dest>
     </String>
-    <String List="0" Partial="1">
+    <String List="0">
       <EDID>zLexingtonGarage</EDID>
       <REC>CELL:FULL</REC>
       <Source>Lexington Parking Garage</Source>
@@ -731,7 +731,7 @@ Please see the nexus mod page or git repository for extended author credits and 
       <EDID>DLC04BottlingPlant02</EDID>
       <REC>CELL:FULL</REC>
       <Source>Secure Beverageer Lab</Source>
-      <Dest>ビバレッジャーのラボを確保する</Dest>
+      <Dest>保安ビバレッジャーラボ</Dest>
     </String>
     <String List="0">
       <EDID>SandyCovesHome01</EDID>
@@ -1464,6 +1464,12 @@ Please see the nexus mod page or git repository for extended author credits and 
       <REC>WRLD:FULL</REC>
       <Source>Nuka-Town Market</Source>
       <Dest>ヌカ・タウン・マーケット</Dest>
+    </String>
+    <String List="1">
+      <EDID>PRP_Dev_Notice</EDID>
+      <REC>MESG:DESC</REC>
+      <Source>I found some strawberry cheesecake!</Source>
+      <Dest>ストロベリーチーズケーキを見つけたんだ！</Dest>
     </String>
   </Content>
 </SSTXMLRessources>
